# agentic-rag-chatbot

./: .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: backend-quality.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  ingestion.py  logging.py  main.py  models.py
backend/tests/: test_config.py  test_ingestion.py  test_models.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: chat.tsx
frontend/components/chat/: index.tsx  markdown.tsx  source-cards.tsx  steps-detail.tsx  types.ts  typing-indicator.tsx
frontend/lib/: api.ts
