[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for the agentic RAG chatbot."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "uvicorn",
  "langchain",
  "langchain-openai",
  "langchain-chroma",
  "langgraph",
  "chromadb",
  "pymupdf",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "structlog",
  "rank-bm25",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["generate_graph.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
pretty = true
